--- a/pizza hut/index.html
+++ b/pizza hut/index.html
@@ -8,6 +8,7 @@
     <!-- cdn stands for content delivery network -->
     <!-- cdn link ki wjhse se website pr cache hojati toh opening speed inc
      -->
+     <script src="scripts/services/api-cilent.js"></script>
 </head>
 <body>
     <div class="container">
