--- a/pizza hut/index.html
+++ b/pizza hut/index.html
@@ -8,7 +8,8 @@
     <!-- cdn stands for content delivery network -->
     <!-- cdn link ki wjhse se website pr cache hojati toh opening speed inc
      -->
-     <script src="scripts/services/api-cilent.js"></script>
+     <script type="module" src="scripts/controller/pizza-controller.js"></script>
+     <!-- //module with start the nmodules  -->
 </head>
 <body>
     <div class="container">
