--- a/pizza hut/index.html
+++ b/pizza hut/index.html
@@ -24,10 +24,12 @@
         
         <section>
             <div class="row">
-                <div class="col-8">
-                    pizza will be here
+                <div class="col-8" id="pizza-output">
+                    <!-- pizza will be here -->
                 </div>
-                basket will be here
+                <div class="col-4">
+                     basket will be here
+                </div>
             </div>
         </section>
     
