--- a/Pizza App/index.html
+++ b/Pizza App/index.html
@@ -63,6 +63,6 @@
         </footer>
         
     </div>
-    <script src='./scripts/controller/pizza-controller.js'></script>
+    <script src="./scripts/controller/pizza-controller.js " type="module"></script>
 </body>
 </html>
